# mai_oop_cpp_task_3

./: CMakeLists.txt  README.md
include/: Array.hpp  Figure.hpp  Hexagon.hpp  Pentagon.hpp  Point.hpp  Point.tpp  Rhomb.hpp
src/: Array.cpp  Hexagon.cpp  Pentagon.cpp  Rhomb.cpp  main.cpp
tests/: test_figure.cpp
